<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#206C07"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/change_text"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:background="#206C07"
            android:text="@string/change_text"
            android:textColor="#FFFFFF"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="44dp"
            android:layout_height="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="20dp"
            android:src="@drawable/back_button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/change1"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            />
        <ImageView
            android:id="@+id/change2"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            />
        <ImageView
            android:id="@+id/change3"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hand"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginLeft="130dp"
            android:background="#206C07"
            android:text="@string/hand"
            android:textColor="#FFFFFF"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/pass"
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:layout_gravity="end"
            android:layout_marginLeft="30dp"
            android:background="@drawable/no_change_bt"
            android:text="@string/pass"
            android:textColor="#206C07"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/hand1"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            />
        <ImageView
            android:id="@+id/hand2"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            />
        <ImageView
            android:id="@+id/hand3"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="25dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/hand4"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="70dp"
            />
        <ImageView
            android:id="@+id/hand5"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            />

    </LinearLayout>



    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:background="#206C07"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:textSize="30dp" />



</LinearLayout>